added easycomplete and google maps

--- a/GuinnessGuideCore/Views/Shared/_Layout.cshtml
+++ b/GuinnessGuideCore/Views/Shared/_Layout.cshtml
@@ -10,6 +10,7 @@
     </script>
     
     <link href="lib/bootstrap/dist/css/bootstrap.css" rel="stylesheet" />
+    <link href="~/css/Site.css" rel="stylesheet" />
 
     <script src="lib/jquery/dist/jquery.js"></script>
     <script src="lib/bootstrap/dist/js/bootstrap.js"></script>
@@ -42,5 +43,11 @@
         </footer>
     </div>
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.3.2/react.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.3.2/react-dom.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/remarkable/1.7.1/remarkable.min.js"></script>
+    <script src="@Url.Content("~/js/jquery.easy-autocomplete.js")"></script>
+    <script src="@Url.Content("~/js/guide.jsx")"></script>
+    <script src="@Url.Content("~/js/MapsAPI.js")"></script>
 </body>
 </html>
