--- a/GuinnessGuideCore/Views/Home/Index.cshtml
+++ b/GuinnessGuideCore/Views/Home/Index.cshtml
@@ -3,42 +3,23 @@
     <h1>Guinness Travel Guide</h1>
     <p class="lead">This is a guide to help you locate your closest guinness place</p>
     <div class="col-lg-4">
-        <div class="input-group">
-            <input type="text" class="form-control" placeholder="city / country / pub / store...">
-            <span class="input-group-btn">
-                <button class="btn btn-primary" type="button">Search</button>
-            </span>
-        </div><!-- /input-group -->
-    </div><br />
-    <div class="btn-group">
-        <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            Other options <span class="caret"></span>
-        </button>
-        <ul class="dropdown-menu">
-            <li><a href="#">I found a guinness place!!</a></li>
-            <li><a href="#">Rate a guinness place!</a></li>
-            <li role="separator" class="divider"></li>
-            <li><a href="#">Guinness offical website</a></li>
-        </ul>
+        <div id="content"></div>
+    </div>
+    <div class="col-lg-4">
+        <div class="btn-group">
+            <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Other options <span class="caret"></span>
+            </button>
+            <ul class="dropdown-menu">
+                <li><a href="#">I found a guinness place!!</a></li>
+                <li><a href="#">Rate a guinness place!</a></li>
+                <li role="separator" class="divider"></li>
+                <li><a href="#">Guinness offical website</a></li>
+            </ul>
+        </div>
     </div>
 </div>
 <div class="row">
-    <table>
-        <thead>
-        <tr>
-            <th>Title</th>
-            <th>Year</th>
-            <th>Rating</th>
-        </tr>
-        </thead>
-        <tbody>
-        <tr>
-            <td><!-- Title --></td>
-            <td><!-- Year --></td>
-            <td><!-- Rating --></td>
-        </tr>
-        </tbody>
-    </table>
 
 </div>
 <div class="row">
