--- a/GuinnessGuideCore/Views/Shared/_Layout.cshtml
+++ b/GuinnessGuideCore/Views/Shared/_Layout.cshtml
@@ -11,6 +11,7 @@
     
     <link href="lib/bootstrap/dist/css/bootstrap.css" rel="stylesheet" />
     <link href="~/css/Site.css" rel="stylesheet" />
+    <link href="~/css/easy-autocomplete.min.css" rel="stylesheet" />
 
     <script src="lib/jquery/dist/jquery.js"></script>
     <script src="lib/bootstrap/dist/js/bootstrap.js"></script>
