--- a/GuinnessGuideCore/Views/Shared/_Layout.cshtml
+++ b/GuinnessGuideCore/Views/Shared/_Layout.cshtml
@@ -11,10 +11,11 @@
     
     <link href="lib/bootstrap/dist/css/bootstrap.css" rel="stylesheet" />
     <link href="~/css/Site.css" rel="stylesheet" />
-    <link href="~/css/easy-autocomplete.min.css" rel="stylesheet" />
+    <link href="~/lib/react-select/dist/react-select.css" rel="stylesheet" />
 
     <script src="lib/jquery/dist/jquery.js"></script>
     <script src="lib/bootstrap/dist/js/bootstrap.js"></script>
+    <link href="~/lib/react-select/dist/react-select.js" rel="stylesheet" />
 </head>
 <body>
     <div class="navbar navbar-inverse navbar-fixed-top">
